# config-loader

./: CMakeLists.txt  LICENSE  readme.md
config_loader/: config_loader.h  json_parser.h
tests/: test.cpp
